objects/fferpcore__ProcessLog__c.object
<CustomObject>
    <fields>
        <fullName>fferpcore__AsyncApexJobId__c</fullName>
        <description>ID of the asynchronous job processing this record.</description>
        <label>Async Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__GroupingKey__c</fullName>
        <description>Stores the grouping key, which is generated by concatenating the values of the grouping fields.</description>
        <label>Grouping Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ParentProcessRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In the case of grouped process chaining, this displays the parent of all the process runs.</description>
        <label>Parent Process Run</label>
        <referenceTo>fferpcore__ProcessRun__c</referenceTo>
        <relationshipLabel>Child Process Logs</relationshipLabel>
        <relationshipName>Child_Process_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__ProcessRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Run</label>
        <referenceTo>fferpcore__ProcessRun__c</referenceTo>
        <relationshipLabel>Process Logs</relationshipLabel>
        <relationshipName>Process_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__ProcessUserGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Process User Group.</description>
        <label>Process User Group</label>
        <referenceTo>fferpcore__ProcessUserGroup__c</referenceTo>
        <relationshipLabel>Process Logs</relationshipLabel>
        <relationshipName>Process_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__QueryLocatorResultOrderingSequence__c</fullName>
        <description>The ordering sequence in which query locator result records are sorted.</description>
        <label>Query Locator Result Ordering Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__RecordId__c</fullName>
        <description>ID of the record that is to be processed.</description>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__RelatedRecordId__c</fullName>
        <description>ID of the related record. This could be an intermediate record or output record&apos;s ID.</description>
        <label>Related Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__RelatedRecord__c</fullName>
        <description>Contains the value of Related Record ID. Displays the Record ID if there is no Related Record ID available.</description>
        <formula>IF(NOT(ISBLANK(fferpcore__RelatedRecordId__c)), HYPERLINK(&apos;/&apos;+fferpcore__RelatedRecordId__c, fferpcore__RelatedRecordId__c) , HYPERLINK(&apos;/&apos;+ fferpcore__RecordId__c , fferpcore__RecordId__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Status__c</fullName>
        <description>Processing status of the record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>PENDING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Process Log</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__RelatedRecord__c</columns>
        <columns>fferpcore__Status__c</columns>
        <columns>fferpcore__Message__c</columns>
        <columns>fferpcore__ProcessRun__c</columns>
        <columns>fferpcore__ParentProcessRun__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>